syntax = "proto3";

option java_package = "io.grpc.examples.helloword";
option java_outer_classname = "HelloWorldProto";
option java_multiple_files = true;
option objc_class_prefix = "HLW";

package helloworld;

// The greeting service definition
service Greeter {
    // Sends a greeting
    rpc SayHello (HelloRequest) returns (HelloReply);

    // Streams a many greetings
    rpc SayHelloStreaming (stream HelloRequest) returns (stream HelloReply);

    rpc SayHelloClientStreaming (stream HelloRequest) returns (HelloReply);

    rpc SayHelloServerStreaming (HelloRequest) returns (stream HelloReply);
}

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}